--- a/packages/javascript/package.json
+++ b/packages/javascript/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@open-initml/social-media-size",
+  "version": "0.0.1",
   "description": "Social media size JS tooling",
   "private": false,
   "main": "dist/index.js",
